# GPTFit

./: '  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  app.py  dump.rdb  git_rem_backup.txt  models.py  package.json  requirements.txt  routes.py  server.py  views.py
archive/: app.py  routes.py  uwsgi.ini
archive/gptfit-venv/: pyvenv.cfg
archive/migrations/versions/: 987dfe5bad11_.py
client/: dump.rdb  package-lock.json  package.json  rollup.config.js
client/archive/public/: bundle.css  bundle.js  bundle.js.map
client/archive/static/: bundle.css  bundle.css.map  index.html
client/src/: App.svelte  Browse.svelte  Generate.svelte  Home.svelte  Login.svelte  Profile.svelte  Register.svelte  auth.js
client/static/: bundle.js  bundle.js.map
migrations/: 20231113212309_01_create_users_table.up.sql  20231114191051_02_create_programs_table.down.sql  20231114191051_02_create_programs_table.up.sql  20231115025115_03_create_fitness_profile_table.down.sql  20231115025115_03_create_fitness_profile_table.up.sql
migrations/2023-08-09-154954_rust/: up.sql
migrations/2023-08-09-174704_profile_and_gen_text/: down.sql  up.sql
migrations/versions/: 166a1fe95370_added_new_fields_to_fitnessprofile.py  29332bf4ab56_added_new_fields_to_fitnessprofile.py  a160655885e6_added_new_fields_to_fitnessprofile.py
src/: api_responses.rs  auth_handler.rs  email_service.rs  errors.rs  gen_handlers.rs  invitation_handler.rs  main.rs  models.rs  profile_handlers.rs  register_handler.rs  routes.rs  schema.rs  utils.rs
