[package]
name = "gptfit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-rt = "2.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session", "redis-rs-session", "redis-actor-session"] }
actix-web = "4.3.1"
rust-argon2 = "1"
chrono = "0.4.26"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres", "sqlite", "r2d2", "uuid", "chrono", "serde_json"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
openai_api_rust = "0.1.8"
r2d2 = "0.8.10"
serde = "1.0.181"
serde_derive = "1.0.181"
serde_json = "1.0.104"
sparkpost = "0.5.4"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "sqlite"]}
tokio = { version = "1.29.1", features = ["full"]}
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand = "0.8.5"
log = "0.4.19"
anyhow = "1.0.72"
